[gd_scene load_steps=4 format=3 uid="uid://c7gkpjcsg1bid"]

[ext_resource type="Script" uid="uid://dl7qxofwg12d4" path="res://Scripts/scrambled_7.gd" id="1_julbn"]
[ext_resource type="Texture2D" uid="uid://dg8et5c0cxylc" path="res://MiniGameAssets/scrambled.webp" id="2_4cdps"]
[ext_resource type="Texture2D" uid="uid://cvr5onr70hr2y" path="res://MiniGameAssets/Hint.png" id="4_42p4k"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_julbn")

[node name="OutputLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -102.0
offset_right = 140.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 34

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -27.0
offset_top = 37.0
offset_right = 1180.0
offset_bottom = 184.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "means you can access your data when you need it. If your files are
 locked by ransomware, theyâ€™re unavailable."

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 524.0
offset_right = 651.0
offset_bottom = 591.0
text = "Submit"

[node name="TextureRect2" type="TextureRect" parent="."]
z_index = -3
layout_mode = 0
offset_left = -334.0
offset_top = -181.0
offset_right = 1510.0
offset_bottom = 933.0
mouse_filter = 2
texture = ExtResource("2_4cdps")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -3
layout_mode = 0
offset_left = 384.0
offset_top = 190.0
offset_right = 740.0
offset_bottom = 313.0
mouse_filter = 2
texture = ExtResource("4_42p4k")
expand_mode = 1

[node name="ExitConfirmDialog" type="ConfirmationDialog" parent="."]
auto_translate_mode = 1
dialog_text = "Confirm to exit?"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 423.0
offset_right = 1067.0
offset_bottom = 463.0
theme_override_constants/separation = 16
alignment = 1

[node name="Button1" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button4" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button5" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button6" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button7" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button8" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button9" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button10" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button11" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button12" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShuffleButton" type="Button" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 528.0
offset_right = 215.0
offset_bottom = 579.0
text = "Shuffle"

[connection signal="confirmed" from="ExitConfirmDialog" to="." method="_on_exit_confirm_dialog_confirmed"]
